# oda-dashboard

./: .gitignore  README.md  cors-config.json  creating-embeddable-version.md  observablehq.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: deploy.yml  purge_cache.yml
cdn_files/: financing.parquet
scripts/: .gitignore  config.py  upload_sectors_partition.sh
scripts/analysis/: common.py  financing.py  gender.py  recipients.py  sectors.py
scripts/analysis_tools/: donor_mapping.json  get_unique_values.py  indicators.json  recipient_mapping.json  sector_lists.py  versions.py
src/: .gitignore  faqs.md  gender.md  index.md  recipients.md  sectors.md  style.css  tailwind.generated.css
src/.observablehq/: deploy.json
src/components/: AutoPlot.jsx  AutoTable.jsx  DropdownMenu.jsx  MultiSelect.jsx  NavMenu.jsx  RangeInput.jsx  Treemap.js  barPlot.js  colorPalettes.js  colors.js  convertUintArray.js  dataQueries.js  downloadXLSX.js  (+21 more)
tests/: __init__.py
topic_page/: aid_to_africa_ts.csv  aid_to_health_ts.csv  aid_to_humanitarian_ts.csv  aid_to_income_latest.csv  bi_plus_multi_health_spending_covid_non_covid.csv  bi_plus_multi_health_spending_multiple_donors.csv  key_sector_shares.csv  oda_covid.csv  oda_covid_health_gates.csv  oda_gni_single_year_ts.csv  oda_gni_sm.csv  oda_gni_ts.csv  oda_key_numbers.json  sm_total_oda.csv  sm_total_oda_csv
validation/: __init__.py  anomalies.py  checks.py  config.py  core.py  manifest.py  models.py  report.py  seek_anomalies.py  seek_checks.md  seek_data.py  seek_manifest.py
(+83 files in other folders)
