[project]
name = "oda-dashboard"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pathlib (>=1.0.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "oda-data (>2, <3.0.0)",
    "pydeflate (>=2.1.0,<3.0.0)",
    "bblocks (>=1.4.2,<2.0.0)",
    "black (>=25.1.0,<26.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
