[project]
name = "oda-dashboard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bblocks>=1.4, <2.0",
    "oda-data>=2.3.1",
    "pandas>=2.3.2",
    "pyarrow>=17.0.0",
    "pydeflate>=2.3.3",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.251201",
    "pytest>=8.0.0",
    "ruff>=0.14.8",
]
